--- a/home.html
+++ b/home.html
@@ -152,18 +152,16 @@ main {
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
-  <script type="module">
-// ===== CONFIG FIREBASE =====
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+<script>
 const firebaseConfig = {
-  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-  authDomain: "kylita-f2923.firebaseapp.com",
-  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-  projectId: "kylita-f2923",
-  storageBucket: "kylita-f2923.firebasestorage.app",
-  messagingSenderId: "431823530994",
-  appId: "1:431823530994:web:88a07e633751686e5ad96b",
-  measurementId: "G-F4LLNWQJ16"
+  apiKey: "AIzaSyAzSzAc3Fz18PdgumpGY3_s2K42v2MzYK0",
+  authDomain: "message-957c6.firebaseapp.com",
+  databaseURL: "https://message-957c6-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "message-957c6",
+  storageBucket: "message-957c6.firebasestorage.app",
+  messagingSenderId: "518720941529",
+  appId: "1:518720941529:web:7c6b444ef9ac0b0d127dc8",
+  measurementId: "G-GW0GKGQ9EP"
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -176,7 +174,6 @@ const messagesEl = document.getElementById("messages");
 const input = document.getElementById("messageInput");
 const sendBtn = document.getElementById("sendBtn");
 
-// ===== AUTH & RÉCUPÉRATION DU PSEUDO =====
 auth.onAuthStateChanged(user => {
   if (user) {
     const uid = user.uid;
@@ -185,12 +182,10 @@ auth.onAuthStateChanged(user => {
       usernameDisplay.textContent = username;
     });
   } else {
-    // Redirection si non connecté
     window.location.href = "index.html";
   }
 });
 
-// ===== ENVOI DU MESSAGE =====
 function sendMessage() {
   const text = input.value.trim();
   if (!text || !username) return;
@@ -210,7 +205,6 @@ input.addEventListener("keydown", e => {
   if (e.key === "Enter") sendMessage();
 });
 
-// ===== AFFICHAGE DES MESSAGES =====
 function escapeHtml(str) {
   return String(str)
     .replace(/&/g, "&amp;")
@@ -226,7 +220,7 @@ function renderMessage(obj) {
   
   const meta = document.createElement("div");
   meta.className = "meta";
-  meta.innerHTML = `${escapeHtml(obj.name)} · <span class="small">${new Date(obj.timestamp).toLocaleString()}</span>`;
+  meta.innerHTML = `${escapeHtml(obj.name)} · <span>${new Date(obj.timestamp).toLocaleTimeString()}</span>`;
   
   const body = document.createElement("div");
   body.innerHTML = escapeHtml(obj.text);
@@ -238,11 +232,40 @@ function renderMessage(obj) {
   messagesEl.scrollTop = messagesEl.scrollHeight;
 }
 
-// Écoute en temps réel des messages
+// Messages système (connexion/déconnexion)
+function renderSystemMessage(text, color) {
+  const div = document.createElement("div");
+  div.style.color = color;
+  div.style.textAlign = "center";
+  div.style.margin = "8px 0";
+  div.style.fontStyle = "italic";
+  div.textContent = text;
+  messagesEl.appendChild(div);
+  messagesEl.scrollTop = messagesEl.scrollHeight;
+}
+
+// Écoute de l'état de connexion Firebase
+let wasConnected = true;
+db.ref(".info/connected").on("value", snap => {
+  if (snap.val() === true) {
+    if (!wasConnected) {
+      renderSystemMessage("Reconnecté.", "#aaa");
+    }
+    wasConnected = true;
+  } else {
+    if (wasConnected) {
+      renderSystemMessage("Déconnecté. Reconnexion...", "red");
+    }
+    wasConnected = false;
+  }
+});
+
+// Affichage des messages
 db.ref("messages").orderByChild("timestamp").limitToLast(200).on("child_added", snap => {
   const data = snap.val();
   if (data) renderMessage(data);
 });
-  </script>
+</script>
+
 </body>
 </html>
