--- a/home.html
+++ b/home.html
@@ -132,13 +132,13 @@ main {
   max-width: 60%;
   margin: 5px 0;
   padding: 8px 12px;
-  background: #eee;
+  background: #2776F5;
   border-radius: 8px;
   clear: both;
 }
 
 .msg.mine {
-  background: #4a90e2;
+  background: #35F527;
   color: white;
   margin-left: auto;  /* pousse à droite */
   text-align: right;
@@ -168,6 +168,7 @@ main {
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script>
+// Initialisation Firebase (remplace par ta config)
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
@@ -181,107 +182,84 @@ const firebaseConfig = {
 };
 
 firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
 const db = firebase.database();
 
-let username = null;
-const usernameDisplay = document.getElementById("usernameDisplay");
 const messagesEl = document.getElementById("messages");
-const input = document.getElementById("messageInput");
-const sendBtn = document.getElementById("sendBtn");
+const form = document.getElementById("form");
+const input = document.getElementById("input");
 
-auth.onAuthStateChanged(user => {
-  if (user) {
-    const uid = user.uid;
-    db.ref("users/" + uid + "/displayName").once("value").then(snap => {
-      username = snap.val() || "Invité";
-      usernameDisplay.textContent = username;
-    });
-  } else {
-    window.location.href = "index.html";
-  }
-});
+let username = localStorage.getItem("username");
 
-function sendMessage() {
-  const text = input.value.trim();
-  if (!text || !username) return;
-  
-  db.ref("messages").push({
-    name: username,
-    text: text,
-    timestamp: Date.now()
-  });
-  
-  input.value = "";
-  input.focus();
+// Si pas de pseudo, demander à l’utilisateur
+if (!username) {
+  username = prompt("Entrez votre pseudo");
+  localStorage.setItem("username", username);
 }
 
-sendBtn.addEventListener("click", sendMessage);
-input.addEventListener("keydown", e => {
-  if (e.key === "Enter") sendMessage();
-});
+const messagesRef = db.ref("messages");
 
-function escapeHtml(str) {
-  return String(str)
-    .replace(/&/g, "&amp;")
-    .replace(/</g, "&lt;")
-    .replace(/>/g, "&gt;")
-    .replace(/"/g, "&quot;")
-    .replace(/'/g, "&#039;");
-}
-
+// Fonction pour afficher un message dans le chat
 function renderMessage(obj) {
   const div = document.createElement("div");
   div.className = "msg" + (obj.name === username ? " mine" : "");
   
-  const meta = document.createElement("div");
-  meta.className = "meta";
-  meta.innerHTML = `${escapeHtml(obj.name)} · <span>${new Date(obj.timestamp).toLocaleTimeString()}</span>`;
-  
-  const body = document.createElement("div");
-  body.innerHTML = escapeHtml(obj.text);
-  
-  div.appendChild(meta);
-  div.appendChild(body);
-  messagesEl.appendChild(div);
-  
-  messagesEl.scrollTop = messagesEl.scrollHeight;
-}
-
-
-// Messages système (connexion/déconnexion)
-function renderSystemMessage(text, color) {
-  const div = document.createElement("div");
-  div.style.color = color;
-  div.style.textAlign = "center";
-  div.style.margin = "8px 0";
-  div.style.fontStyle = "italic";
-  div.textContent = text;
-  messagesEl.appendChild(div);
-  messagesEl.scrollTop = messagesEl.scrollHeight;
-}
-
-// Écoute de l'état de connexion Firebase
-let wasConnected = true;
-db.ref(".info/connected").on("value", snap => {
-  if (snap.val() === true) {
-    if (!wasConnected) {
-      renderSystemMessage("Reconnecté.", "#aaa");
-    }
-    wasConnected = true;
+  // Si c’est un message système (erreur/reconnexion)
+  if (obj.system) {
+    div.className = "msg system";
+    div.textContent = obj.text;
   } else {
-    if (wasConnected) {
-      renderSystemMessage("Déconnecté. Reconnexion...", "red");
-    }
-    wasConnected = false;
+    div.innerHTML = `<span class="author">${obj.name}</span> : ${obj.text}`;
+  }
+
+  messagesEl.appendChild(div);
+  messagesEl.scrollTop = messagesEl.scrollHeight;
+}
+
+// Charger les messages en temps réel
+messagesRef.orderByChild("timestamp").limitToLast(100).on("value", snapshot => {
+  messagesEl.innerHTML = "";
+  snapshot.forEach(child => {
+    renderMessage(child.val());
+  });
+});
+
+// Envoyer un message
+form.addEventListener("submit", e => {
+  e.preventDefault();
+  if (input.value.trim() === "") return;
+
+  const msgObj = {
+    name: username,
+    text: input.value.trim(),
+    timestamp: Date.now(),
+    system: false
+  };
+
+  messagesRef.push(msgObj);
+  input.value = "";
+});
+
+// Gestion des statuts de connexion
+function sendSystemMessage(text, isError = false) {
+  const msgObj = {
+    name: "",
+    text: text,
+    timestamp: Date.now(),
+    system: true,
+    error: isError
+  };
+  messagesRef.push(msgObj);
+}
+
+// Ecoute de l'état de connexion Firebase
+firebase.database().ref(".info/connected").on("value", snap => {
+  if (snap.val() === true) {
+    sendSystemMessage("Reconnecté.");
+  } else {
+    sendSystemMessage("Déconnecté. Reconnexion...", true);
   }
 });
 
-// Affichage des messages
-db.ref("messages").orderByChild("timestamp").limitToLast(200).on("child_added", snap => {
-  const data = snap.val();
-  if (data) renderMessage(data);
-});
 </script>
 
 </body>
