--- a/home.html
+++ b/home.html
@@ -129,19 +129,31 @@ main {
     z-index: 1;
 }
 .msg {
-  max-width: 60%;
-  margin: 5px 0;
-  padding: 8px 12px;
-  background: #2776F5;
-  border-radius: 8px;
+  margin: 4px 0;
+  padding: 6px 10px;
+  border-radius: 10px;
+  max-width: 70%;
   clear: both;
+  word-wrap: break-word;
 }
 
 .msg.mine {
-  background: #35F527;
-  color: white;
-  margin-left: auto;  /* pousse à droite */
+  background-color: #35F527;
+  float: right;
   text-align: right;
+}
+
+.msg:not(.mine) {
+  background-color: #27B0F5;
+  float: left;
+  text-align: left;
+}
+
+.msg.system {
+  clear: both;
+  float: none;
+  max-width: 100%;
+  background: none !important;
 }
 
   </style>
