--- a/index.html
+++ b/index.html
@@ -1,159 +1,121 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>KenzoPay - Connexion</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #f7f9fc;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      width: 360px;
-      text-align: center;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-      color: #003087;
-      font-size: 22px;
-      font-weight: 700;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-
-    .btn {
-      width: 100%;
-      background: #0070ba;
-      color: #fff;
-      padding: 12px;
-      border: none;
-      border-radius: 25px;
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s;
-      margin-top: 10px;
-    }
-    .btn:hover { background: #00457c; }
-
-    .switch {
-      margin-top: 15px;
-      font-size: 14px;
-      color: #333;
-    }
-    .switch span {
-      color: #0070ba;
-      cursor: pointer;
-      font-weight: 600;
-    }
-    .error {
-      color: red;
-      font-size: 14px;
-      margin-top: 10px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>InterPay - Connexion/Inscription</title>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+* { box-sizing: border-box; margin:0; padding:0; }
+body { font-family:'Inter',sans-serif; background:#f7f9fc; display:flex; align-items:center; justify-content:center; height:100vh; }
+.card { background:#fff; border-radius:12px; padding:30px; box-shadow:0 4px 20px rgba(0,0,0,0.1); width:360px; text-align:center; }
+h2 { margin-bottom:20px; color:#003087; font-size:22px; font-weight:700; }
+input { width:100%; padding:12px; margin:10px 0; border:1px solid #ccc; border-radius:8px; font-size:14px; }
+.btn { width:100%; background:#0070ba; color:#fff; padding:12px; border:none; border-radius:25px; font-size:15px; font-weight:600; cursor:pointer; transition:0.3s; margin-top:10px; }
+.btn:hover { background:#00457c; }
+.switch { margin-top:15px; font-size:14px; color:#333; }
+.switch span { color:#0070ba; cursor:pointer; font-weight:600; }
+.error { color:red; font-size:14px; margin-top:10px; }
+</style>
 </head>
 <body>
-  <div class="card">
-    <h2 id="formTitle">Connexion</h2>
+<div class="card">
+  <h2 id="formTitle">Connexion</h2>
 
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Mot de passe" required>
+  <input type="email" id="email" placeholder="Email" required>
+  <input type="password" id="password" placeholder="Mot de passe" required>
+  <input type="text" id="pseudo" placeholder="Pseudo (obligatoire)" style="display:none;">
+  <input type="url" id="pfp" placeholder="URL photo de profil (optionnel)" style="display:none;">
 
-    <button class="btn" id="submitBtn">Se connecter</button>
-    <div class="error" id="errorMsg"></div>
+  <button class="btn" id="submitBtn">Se connecter</button>
+  <div class="error" id="errorMsg"></div>
 
-    <div class="switch">
-      Pas encore de compte ? <span id="toggleForm">Inscription</span>
-    </div>
+  <div class="switch">
+    Pas encore de compte ? <span id="toggleForm">Inscription</span>
   </div>
+</div>
 
-  <script>
-    // Config Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
-      authDomain: "kylita-f2923.firebaseapp.com",
-      databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
-      projectId: "kylita-f2923",
-      storageBucket: "kylita-f2923.appspot.com",
-      messagingSenderId: "431823530994",
-      appId: "1:431823530994:web:88a07e633751686e5ad96b",
-      measurementId: "G-F4LLNWQJ16"
-    };
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyDyWu4TI4PIRXfeb7yqt0WIGClgu10IjkM",
+  authDomain: "kylita-f2923.firebaseapp.com",
+  databaseURL: "https://kylita-f2923-default-rtdb.firebaseio.com",
+  projectId: "kylita-f2923",
+  storageBucket: "kylita-f2923.appspot.com",
+  messagingSenderId: "431823530994",
+  appId: "1:431823530994:web:88a07e633751686e5ad96b",
+  measurementId: "G-F4LLNWQJ16"
+};
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.database();
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+const db = firebase.database();
 
-    let isLogin = true; // Par défaut : connexion
+let isLogin = true;
 
-    document.getElementById("toggleForm").onclick = () => {
-      isLogin = !isLogin;
-      document.getElementById("formTitle").textContent = isLogin ? "Connexion" : "Inscription";
-      document.getElementById("submitBtn").textContent = isLogin ? "Se connecter" : "S'inscrire";
-      document.getElementById("toggleForm").textContent = isLogin ? "Inscription" : "Connexion";
-      document.querySelector(".switch").innerHTML = isLogin 
-        ? `Pas encore de compte ? <span id="toggleForm">Inscription</span>`
-        : `Déjà inscrit ? <span id="toggleForm">Connexion</span>`;
-      document.getElementById("toggleForm").onclick = arguments.callee;
-    };
+document.getElementById("toggleForm").onclick = () => {
+  isLogin = !isLogin;
+  document.getElementById("formTitle").textContent = isLogin ? "Connexion" : "Inscription";
+  document.getElementById("submitBtn").textContent = isLogin ? "Se connecter" : "S'inscrire";
+  document.getElementById("toggleForm").textContent = isLogin ? "Inscription" : "Connexion";
 
-    document.getElementById("submitBtn").onclick = async () => {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-      const errorMsg = document.getElementById("errorMsg");
+  // afficher/masquer pseudo et pfp pour inscription
+  document.getElementById("pseudo").style.display = isLogin ? "none" : "block";
+  document.getElementById("pfp").style.display = isLogin ? "none" : "block";
 
-      errorMsg.textContent = "";
+  document.querySelector(".switch").innerHTML = isLogin 
+    ? `Pas encore de compte ? <span id="toggleForm">Inscription</span>`
+    : `Déjà inscrit ? <span id="toggleForm">Connexion</span>`;
+  document.getElementById("toggleForm").onclick = arguments.callee;
+};
 
-      try {
-        if (isLogin) {
-          // Connexion
-          await auth.signInWithEmailAndPassword(email, password);
-          window.location.href = "dashboard.html";
-        } else {
-          // Inscription
-          const cred = await auth.createUserWithEmailAndPassword(email, password);
-          const uid = cred.user.uid;
+document.getElementById("submitBtn").onclick = async () => {
+  const email = document.getElementById("email").value.trim();
+  const password = document.getElementById("password").value.trim();
+  const errorMsg = document.getElementById("errorMsg");
+  errorMsg.textContent = "";
 
-          // Créer les données utilisateur
-          await db.ref("users/" + uid).set({
-            username: "NON DEFINI",
-            email: email,
-            balance: 0,
-            logs: {
-              init: "Compte créé le " + new Date().toLocaleString()
-            }
-          });
+  try {
+    if (isLogin) {
+      // Connexion
+      const cred = await auth.signInWithEmailAndPassword(email, password);
+      const uid = cred.user.uid;
 
-          window.location.href = "dashboard.html";
-        }
-      } catch (error) {
-        errorMsg.textContent = error.message;
+      // vérifier finished
+      const snapshot = await db.ref("users/" + uid).once("value");
+      const data = snapshot.val();
+      if (!data || data.finished !== true) {
+        errorMsg.textContent = "Veuillez compléter votre pseudo et photo de profil.";
+        return;
       }
-    };
-  </script>
+      window.location.href = "dashboard.html";
+
+    } else {
+      // Inscription
+      const pseudo = document.getElementById("pseudo").value.trim();
+      const pfp = document.getElementById("pfp").value.trim();
+      if (!pseudo) return errorMsg.textContent = "Le pseudo est obligatoire.";
+
+      const cred = await auth.createUserWithEmailAndPassword(email, password);
+      const uid = cred.user.uid;
+
+      await db.ref("users/" + uid).set({
+        username: pseudo,
+        pfp: pfp || null,
+        email: email,
+        balance: 0,
+        logs: { init: "Compte créé le " + new Date().toLocaleString() },
+        finished: true
+      });
+
+      window.location.href = "dashboard.html";
+    }
+  } catch (error) {
+    errorMsg.textContent = error.message;
+  }
+};
+</script>
 </body>
 </html>
